--- a/index.html
+++ b/index.html
@@ -1,19 +1,33 @@
+<!DOCTYPE html>
+
 <html>
-  <head>
-    <link rel="stylesheet" href="hello.css">
-    <title>Vous Etes Perdu ?</title>
-  </head>
-  <body>
-    <style>
-      h1{
-        background-color: green;
-        border-radius: 1em;
-        padding: 1em;
-        margin: 1em
-      }
-    </style>
-    <h1>Perdu sur l'Internet ?</h1>
-    <h2>Pas de panique, on va vous aider</h2>
-    <strong><pre>    * <----- vous &ecirc;tes ici</pre></strong>
-  </body>
+    <head>
+        <link rel="stylesheet" href="mycv.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
+
+        <title>Paul Fraenkel</title>
+    </head>
+
+    <body>
+        <div class="presentation">
+            <h1 class="name">Paul Fraenkel</h1>
+            <i class="fa-solid fa-phone"></i>
+        </div>
+        <h2>
+            <div class="section">
+                <h2>Experience</h2>
+            </div>
+            <div class="section">
+                <h2>Education</h2>
+            </div>
+            <div class="section">
+                <h2>Skills</h2>
+            </div>
+            <div class="section">
+                <h2>Languages</h2>
+            </div>
+        </h2>
+    </body>
 </html>
