--- a/mycv.html
+++ b/mycv.html
@@ -6,6 +6,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/5821819f0c.js" crossorigin="anonymous"></script>
 
         <title>Paul Fraenkel</title>
     </head>
@@ -16,10 +17,23 @@
             <i class="fa-solid fa-phone"></i>
         </div>
         <h2>
-            <div class="section">Experience</div>
-            <div class="section">Education</div>
-            <div class="section">Skills</div>
-            <div class="section">Language</div>
+            <div class="section">
+                <h2 class="section">Experiences</h2>
+                <ul>
+                    <li>Aller en cours d'info</li>
+                    <li>Apprendre à coder en HTML</li>
+                    <li>Créer ce petit site</li>
+                </ul>
+            </div>
+            <div class="section">
+                <h2 class="section">Education</h2>
+            </div>
+            <div class="section">
+                <h2 class="section">Skills</h2>
+            </div>
+            <div class="section">
+                <h2 class="section">Languages</h2>
+            </div>
         </h2>
     </body>
 </html>
