--- a/mycv.html
+++ b/mycv.html
@@ -13,8 +13,33 @@
 
     <body>
         <div class="presentation">
-            <h1 class="name">Paul Fraenkel</h1>
-            <i class="fa-solid fa-phone"></i>
+            <h1 class="name">Curriculum Vitae de Paul Fraenkel</h1>
+            <div class="flex-container">
+                <div> 
+                    <i class="fa-solid fa-phone"></i>
+                    <p>Some phone number</p>
+                </div>
+                <div>
+                    <i class="fa-solid fa-location-dot"></i>
+                    <p>53 Boulevard Saint-Michel</p>
+                </div>
+                <div> 
+                    <i class="fa-solid fa-globe"></i>
+                    <p><a href="https://www.linkedin.com/in/paul-fraenkel-327605259/"> LinkedIn </a></p>
+                </div>
+                <div>
+                    <i class="fa-solid fa-link"></i>
+                    <p><a href="https://paul-fraenkel.jimdosite.com/">Mon site</a></p>
+                </div>
+                <div>
+                    <i class="fa-solid fa-envelope"></i>
+                    <p>paul.fraenkel@etu.minesparis.psl.eu</p>
+                </div>
+                <div> 
+                    <i class="fa-solid fa-car"></i>
+                    <p>Permis B</p>
+                </div>
+            </div>
         </div>
         <h2>
             <div class="section">
@@ -27,13 +52,45 @@
             </div>
             <div class="section">
                 <h2 class="section">Education</h2>
+                <p> Hello world ! </p>
             </div>
             <div class="section">
                 <h2 class="section">Skills</h2>
+                <pre style="font-family: monospace;">                     ___           ___           ___                                            ___           ___           ___     
+                    /\  \         /\  \         /\  \          ___         ___                 /\  \         /\  \         /\  \    
+                   /::\  \       /::\  \       /::\  \        /\  \       /\  \               /::\  \       /::\  \        \:\  \   
+                  /:/\:\  \     /:/\ \  \     /:/\:\  \       \:\  \      \:\  \             /:/\:\  \     /:/\:\  \        \:\  \  
+                 /::\~\:\  \   _\:\~\ \  \   /:/  \:\  \      /::\__\     /::\__\           /::\~\:\  \   /::\~\:\  \       /::\  \ 
+                /:/\:\ \:\__\ /\ \:\ \ \__\ /:/__/ \:\__\  __/:/\/__/  __/:/\/__/          /:/\:\ \:\__\ /:/\:\ \:\__\     /:/\:\__\
+                \/__\:\/:/  / \:\ \:\ \/__/ \:\  \  \/__/ /\/:/  /    /\/:/  /             \/__\:\/:/  / \/_|::\/:/  /    /:/  \/__/
+                     \::/  /   \:\ \:\__\    \:\  \       \::/__/     \::/__/                   \::/  /     |:|::/  /    /:/  /     
+                     /:/  /     \:\/:/  /     \:\  \       \:\__\      \:\__\                   /:/  /      |:|\/__/     \/__/      
+                    /:/  /       \::/  /       \:\__\       \/__/       \/__/                  /:/  /       |:|  |                  
+                    \/__/         \/__/         \/__/                                          \/__/         \|__|                  
+               
+                </pre>
+                <a href="https://patorjk.com/software/taag/" style="margin: 1em;"> crédits </a>
             </div>
             <div class="section">
-                <h2 class="section">Languages</h2>
+                <h2 class="section">Langues</h2>
+                <div class="big-list">
+                    <p class="big-list_item"> Anglais </p>
+                    <p class="big-list_item"> Français </p>
+                    <p class="big-list_item"> Espagnol </p>
+                    <p class="big-list_item"> Chinois </p>
+                    <p class="big-list_item"> HTML </p>
+                    <p class="big-list_item"> CSS </p>
+                    <p class="big-list_item"> Java </p>
+                    <p class="big-list_item"> Python </p>
+                    <p class="big-list_item"> Julia </p>
+                    <p class="big-list_item"> GLSL </p>
+                    <p class="big-list_item"> C# </p>
+                    <p class="big-list_item"> C++ </p>
+                </div>
             </div>
         </h2>
+        <div id="credit">
+            <a href="https://wallpapers.com/wallpapers/green-farm-with-grass-and-flowers-in-chatillon-belgium-jdnywvwo99sk6sjy.html">arrière plan</a>
+        </div>
     </body>
 </html>
