--- a/index.html
+++ b/index.html
@@ -1,19 +1,96 @@
+<!DOCTYPE html>
+
 <html>
-  <head>
-    <link rel="stylesheet" href="hello.css">
-    <title>Vous Etes Perdu ?</title>
-  </head>
-  <body>
-    <style>
-      h1{
-        background-color: green;
-        border-radius: 1em;
-        padding: 1em;
-        margin: 1em
-      }
-    </style>
-    <h1>Perdu sur l'Internet ?</h1>
-    <h2>Pas de panique, on va vous aider</h2>
-    <strong><pre>    * <----- vous &ecirc;tes ici</pre></strong>
-  </body>
+    <head>
+        <link rel="stylesheet" href="mycv.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/5821819f0c.js" crossorigin="anonymous"></script>
+
+        <title>Paul Fraenkel</title>
+    </head>
+
+    <body>
+        <div class="presentation">
+            <h1 class="name">Curriculum Vitae de Paul Fraenkel</h1>
+            <div class="flex-container">
+                <div> 
+                    <i class="fa-solid fa-phone"></i>
+                    <p>Some phone number</p>
+                </div>
+                <div>
+                    <i class="fa-solid fa-location-dot"></i>
+                    <p>53 Boulevard Saint-Michel</p>
+                </div>
+                <div> 
+                    <i class="fa-solid fa-globe"></i>
+                    <p><a href="https://www.linkedin.com/in/paul-fraenkel-327605259/"> LinkedIn </a></p>
+                </div>
+                <div>
+                    <i class="fa-solid fa-link"></i>
+                    <p><a href="https://paul-fraenkel.jimdosite.com/">Mon site</a></p>
+                </div>
+                <div>
+                    <i class="fa-solid fa-envelope"></i>
+                    <p>paul.fraenkel@etu.minesparis.psl.eu</p>
+                </div>
+                <div> 
+                    <i class="fa-solid fa-car"></i>
+                    <p>Permis B</p>
+                </div>
+            </div>
+        </div>
+        <h2>
+            <div class="section">
+                <h2 class="section">Experiences</h2>
+                <ul>
+                    <li>Aller en cours d'info</li>
+                    <li>Apprendre à coder en HTML</li>
+                    <li>Créer ce petit site</li>
+                </ul>
+            </div>
+            <div class="section">
+                <h2 class="section">Education</h2>
+                <p> Hello world ! </p>
+            </div>
+            <div class="section">
+                <h2 class="section">Skills</h2>
+                <pre style="font-family: monospace;">                     ___           ___           ___                                            ___           ___           ___     
+                    /\  \         /\  \         /\  \          ___         ___                 /\  \         /\  \         /\  \    
+                   /::\  \       /::\  \       /::\  \        /\  \       /\  \               /::\  \       /::\  \        \:\  \   
+                  /:/\:\  \     /:/\ \  \     /:/\:\  \       \:\  \      \:\  \             /:/\:\  \     /:/\:\  \        \:\  \  
+                 /::\~\:\  \   _\:\~\ \  \   /:/  \:\  \      /::\__\     /::\__\           /::\~\:\  \   /::\~\:\  \       /::\  \ 
+                /:/\:\ \:\__\ /\ \:\ \ \__\ /:/__/ \:\__\  __/:/\/__/  __/:/\/__/          /:/\:\ \:\__\ /:/\:\ \:\__\     /:/\:\__\
+                \/__\:\/:/  / \:\ \:\ \/__/ \:\  \  \/__/ /\/:/  /    /\/:/  /             \/__\:\/:/  / \/_|::\/:/  /    /:/  \/__/
+                     \::/  /   \:\ \:\__\    \:\  \       \::/__/     \::/__/                   \::/  /     |:|::/  /    /:/  /     
+                     /:/  /     \:\/:/  /     \:\  \       \:\__\      \:\__\                   /:/  /      |:|\/__/     \/__/      
+                    /:/  /       \::/  /       \:\__\       \/__/       \/__/                  /:/  /       |:|  |                  
+                    \/__/         \/__/         \/__/                                          \/__/         \|__|                  
+               
+                </pre>
+                <a href="https://patorjk.com/software/taag/" style="margin: 1em;"> crédits </a>
+            </div>
+            <div class="section">
+                <h2 class="section">Langues</h2>
+                <div class="big-list">
+                    <p class="big-list_item"> Anglais </p>
+                    <p class="big-list_item"> Français </p>
+                    <p class="big-list_item"> Espagnol </p>
+                    <p class="big-list_item"> Chinois </p>
+                    <p class="big-list_item"> HTML </p>
+                    <p class="big-list_item"> CSS </p>
+                    <p class="big-list_item"> Java </p>
+                    <p class="big-list_item"> Python </p>
+                    <p class="big-list_item"> Julia </p>
+                    <p class="big-list_item"> GLSL </p>
+                    <p class="big-list_item"> C# </p>
+                    <p class="big-list_item"> C++ </p>
+                </div>
+            </div>
+        </h2>
+        <div id="credit">
+            <a href="https://wallpapers.com/wallpapers/green-farm-with-grass-and-flowers-in-chatillon-belgium-jdnywvwo99sk6sjy.html">arrière plan</a>
+        </div>
+    </body>
 </html>
